--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             <div class="small-heart"></div>
             
         </div>
+
+        <div class="mensaje">
+            <p>
+                HOLA MI NIÑA HERMOSA, MI AMORCITO LINDO COMO ESTAS <br>
+                QUERIA DECIRTE QUE ESTOY MUY FELIZ DE HABERTE CONOCIDO <br>
+                TU MI NIÑA HERMOSA TE HAS CONVERTIDO EN MI MOTIVACIÓN <br>
+                GRACIAS POR ESTOS 10 MESES A MI LADO HAS SIDO LO MEJOR <br>
+                QUE ME HA PASADO <br><br>
+                TE AMOOOOOO MUCHOOOOOO
+            </p>
+        </div>
         
     <script src="script.js"></script>
 </body>
