--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Te Amo Mucho</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Heart_corazón.png">
 </head>
 <body>
         <h1>TE AMO MUCHO MI NIÑA HERMOSA</h1>
